Fix z-index in  overview-background-details big circle

--- a/src/sections/overview/styles.scss
+++ b/src/sections/overview/styles.scss
@@ -98,7 +98,6 @@
   @extend %overview-background-height;
   width: calc(50% + #{$containerPadding});
   position: absolute;
-  overflow: hidden;
   top: 0;
   right: 0;
   display: none;
